Шаблонизация + ещё страничка

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -1,8 +1,8 @@
 {% extends 'main/template.html' %}
 
-{% block title %}Главная{% endblock %}
+{% block title %}О нас{% endblock %}
 
 {% block body %}
     <h1 style="color: white;">Колледж Пупырка</h1>
-    <h2 style="color: white;">Главная страница</h2>
+    <h2 style="color: white;">Мы очень крутые</h2>
 {% endblock %}
