--- a/main/templates/main/template.html
+++ b/main/templates/main/template.html
@@ -1,18 +1,15 @@
 <!doctype html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="stylesheet" href="{% static 'main/css/style.css' %}">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
     {% block body %}{% endblock %}
-
-    <style>
-        body
-        { background-color: gray; }
-    </style>
 </body>
 </html>
