--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -3,6 +3,9 @@
 {% block title %}О нас{% endblock %}
 
 {% block body %}
-    <h1 style="color: white;">Колледж Пупырка</h1>
-    <h2 style="color: white;">Мы очень крутые</h2>
+  <div class="about about__text">
+      <p>"Пупырка" – крупнейшее образовательное учреждения среднего профессионального образования города Сызрань.</p>
+      <p>Колледж Пупырка основан в 1797 году, имеет лицензию, свидетельство о государственной аккредитации и осуществляет подготовку специалистов со средним профессиональным образованием по наиболее востребованным на рынке труда специальностям.</p>
+      <p> В Пупырке созданы оптимальные условия для максимально эффективного, удобного и увлекательного образовательного процесса. Современная учебно-материальная база, партнерские отношения с бизнес-сообществом, тщательно выверенный подход к организации учебного процесса - все это позволяет колледжу из года в год выпускать компетентных специалистов, востребованных на рынке труда.</p>
+  </div>
 {% endblock %}
