--- a/main/templates/main/template.html
+++ b/main/templates/main/template.html
@@ -6,8 +6,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="icon" type="image/x-icon" href="{% static 'main/image/favicon.png' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'main/image/favicon.png' %}">
     <link rel="stylesheet" href="{% static 'main/css/style.css' %}">
-    <title>{% block title %}{% endblock %}</title>
+    <title>Пупырка - {% block title %}{% endblock %}</title>
 </head>
 <body>
 <header>
@@ -26,7 +28,7 @@
   </header>
 {% block body %}{% endblock %}
   <footer>
-    <p>© 2023 Pupirka</p>
+    <p>© 2023 Колледж Пупырка</p>
   </footer>
 </body>
 </html>
