--- a/main/templates/main/template.html
+++ b/main/templates/main/template.html
@@ -7,7 +7,6 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="icon" type="image/x-icon" href="{% static 'main/image/favicon.png' %}">
-    <link rel="icon" type="image/x-icon" href="{% static 'main/image/favicon.png' %}">
     <link rel="stylesheet" href="{% static 'main/css/style.css' %}">
     <title>Пупырка - {% block title %}{% endblock %}</title>
 </head>
@@ -18,6 +17,7 @@
         <li><a href="{% url 'index' %}">Главная</a></li>
         <li><a href="{% url 'about' %}">О нас</a></li>
         <li><a href="{% url 'applicants' %}">Абитуриентам</a></li>
+        <li><a href="{% url 'admissions' %}">Оставить заявку</a></li>
         <li><a href="{% url 'students' %}">Студентам</a></li>
         <li><a href="{% url 'contact' %}">Контакты</a></li>
       </ul>
